feat(api): trace user modifications of POIs, expose endpoint to list modification history for auditing
